#ifndef ESTATISTICAS_H
#define ESTATISTICAS_H


class Estatisticas
{
public:
    Estatisticas();
};

#endif // ESTATISTICAS_H