@startuml
Title Simulador MIPS
package MipsPadrao{
    class busca{
        - LeitorArquivo: QFile
        - MemoriaPrograma: QList<QString>
        - BarreiraOut: *BarreiraBuscaDecodifica

        + Busca(endereco:QString, barreira:*BarreiraBuscaDecodifica)
        + Executar( pc: int):void

    }
    class BarreiraBuscaDecodifica{
        - Deco: decodifica
        - Inst: instrucao
        + Trigger(): void
        + SetInstr(instr:instrucao): void
        + GetInstr():instrucao
    }
    class decodifica{
        - BarreiraOut: *BarreiraDecoExec
        - Registradores: QList<int>
        + Executar( inst: instrucao ):void
        + WB( inst: instrucao ):void
    }
    class BarreiraDecoExec{
        - Exec: execucao
        - Inst:instrucao
        + Trigger(): void
        + SetInstr(instr:instrucao): void
        + GetInstr():instrucao

    }
    class execucao{
        - BarreiraOut: *BarreiraExecMem
        + Executar( instr:instrucao ):void
    }
    class BarreiraExecMem{
        - Inst:instrucao
        + Trigger():void
        + SetInstr(instr:instrucao): void
        + GetInstr():instrucao
    }
    class memoriaDados{
        - BarreiraOut: *BarreiraMemWB 
        - Memoria: QList<int>
        + Executar(inst:instrucao):void
    }
    class BarreiraMemWB{
        - Inst:instrucao
        + SetInstr(instr:instrucao): void
        + GetInstr():instrucao
        + Trigger():void
    }
    class Estatisticas{
        - IstrucoesValidas: int
        - Ciclos: int
        - desvios:int
        - instrucoesInvalidas: int
        + NovaInstrucao(inst:instrucao):void
        + CicloConcluido():void
        + DesvioTomado():void

    }
    class instrucao{
    - Operacao:QString
    - Op1: QString
    - Op2: QString
    - Op3: QString
    - intOpX:int
    - intOpY:int
    - intOpZ:int
    - pcNaCriacao:int
    - valida:bool
    - resultado:int
    - W_B: bool
    - endW_B:int
    - dadoW_B:int
    + instrucao(input: QString, pc:int)

}
}
package SistemaPredicao{
    class MecanismoPredicao{
        +MecanismoPredicao( barreiraBD: *BarreiraBuscaDecodifica, 
        barreiraDE: *BarreiraBuscaDecodifica, barreiraEM: *BarreiraExecMem, pc:*int)
        *pc:*int
        *brBuscaDeco: *BarreiraBuscaDecodifica
        *brDecoExec: *BarreiraDecoExec
        *brExecMem: *BarreiraExecMem
        +Predicao():void
        +Conferencia():void
    }
    class PredicaoFixa{
        -tomado:bool
        -ultimoBeq:int
        +PredicaoFixa(args[], tomado:bool)
        +Predicao():void
        +Conferencia():void
    }
    class PredicaoTabela{
        -tabela:QList<int>
        +PredicaoFixa(args[])
        +Predicao():void
        +Conferencia():void
    }
}

busca - BarreiraBuscaDecodifica
busca .up.> instrucao
BarreiraBuscaDecodifica - decodifica
decodifica - BarreiraDecoExec
decodifica .up.> instrucao
BarreiraDecoExec - execucao
BarreiraDecoExec -up-instrucao
execucao - BarreiraExecMem
execucao .up.> instrucao
BarreiraExecMem -right- memoriaDados
BarreiraExecMem -up-instrucao
memoriaDados -right- BarreiraMemWB
BarreiraMemWB -up-instrucao
memoriaDados .up.> instrucao
BarreiraBuscaDecodifica -up- instrucao
MecanismoPredicao <|-down- PredicaoFixa
MecanismoPredicao <|-down- PredicaoTabela

MecanismoPredicao -up- BarreiraBuscaDecodifica
MecanismoPredicao -up- BarreiraDecoExec
MecanismoPredicao -up- BarreiraExecMem


@enduml